# MicroTableController

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.txt  REBUILT_AT.txt  profiles.yaml  pyproject.toml  requirements.txt  toupcam.py
.github/workflows/: ci.yml
.openhands/: TASKS.md
diagnostics/: diag_20250810_200833.txt  diag_20250810_202159.txt  diag_20250810_203045.txt
microstage_app/: config.py  main.py  testcamera.py  teststage.py
microstage_app/analysis/: __init__.py  lenses.py  measure.py
microstage_app/control/: autofocus.py  focus_planes.py  leveling.py  profiles.py  raster.py
microstage_app/devices/: camera_mock.py  camera_toupcam-old.py  camera_toupcam.py  camera_webcam.py  stage_marlin.py
microstage_app/io/: storage.py
microstage_app/scripts/: zstack_example.py
microstage_app/tests/: test_af_spinbox_decimals.py  test_autofocus.py  test_camera_driver.py  test_camera_fallback.py  test_capture_metadata.py  test_capture_settings_persist.py  test_capture_validation.py  test_dispatch_stage_result.py  test_image_writer.py  test_lens_profile_persistence.py  test_leveling.py  test_measure.py  test_profile_validation.py  test_profiles_migration.py  test_raster.py  test_resolution_calibration.py  (+15 more)
scripts/: install_libgl1.sh
tests/: test_autofocus_cuda.py  test_camera_settings_persist.py  test_capture_cuda.py  test_default_lens_calibration.py  test_image_writer.py  test_lens_ruler.py  test_leveling_manual_controls.py  test_measure.py  test_measure_view_ruler_append.py  test_preview_cuda.py  test_raster.py  test_ui_control_availability.py
(+15 files in other folders)
