[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "microstage-app"
version = "0.1.0"
description = "Windows desktop app for motorized microscope stage and Toupcam camera control"
readme = "README.md"
authors = [{name = "GerryDoesStuff"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "PySide6>=6.6",
    "numpy>=1.24",
    "opencv-python>=4.8",
    "pyserial>=3.5",
    "tifffile>=2023.7.10",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
microstage-app = "microstage_app.main:main"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["microstage_app*"]
